# lista-lp1-2022.1

./: README.md
histograma/: CMakeLists.txt  README.md
histograma/include/: function.hpp
histograma/src/: function.cpp  main.cpp
histograma/tests/: main.cpp
intervalos/: CMakeLists.txt  README.md
intervalos/data_expected/: list_01_OUT.txt  list_02_OUT.txt  list_03_OUT.txt  list_06_OUT.txt  list_07_OUT.txt  list_08_OUT.txt  list_09_OUT.txt  list_10_OUT.txt  list_11_OUT.txt  list_12_OUT.txt
intervalos/data_in/: list_02.txt  list_06.txt  list_07.txt  list_08.txt  list_09.txt  list_10.txt  list_11.txt  list_12.txt
intervalos/include/: func.hpp
intervalos/src/: func.cpp  main.cpp
pessoa_e_cadastro/: CMakeLists.txt  README.md
pessoa_e_cadastro/data/: CadastroUnico.txt
pessoa_e_cadastro/data_expected/: in1_OUT.txt  in2_OUT.txt
pessoa_e_cadastro/data_in/: in1.txt  in2.txt
pessoa_e_cadastro/include/: database.hpp
pessoa_e_cadastro/src/: database.cpp  main.cpp
pessoa_e_cadastro/tests/: main.cpp
ponto_em_retangulo/: CMakeLists.txt  README.md
ponto_em_retangulo/include/: function.h
ponto_em_retangulo/src/: function.cpp
scripts/: generate-in-out.py  verify-inputs.py
test_manager/include/: test_manager.hpp
test_manager/src/: test_manager.cpp
